<resources>
    <string name="app_name">GTT Ticket Reader</string>
    <string name="action_info">Info</string>
    <string name="data_obliterazione">Data obliteration:</string> <!-- Not sure how to translate "obliterazione", could be confusing. -->
    <string name="minuti_rimanenti">Minutes remaining:</string>
    <string name="corse_rimaste">Trips remaining:</string>
    <string name="info_instructions">Place a ticket near the back of the device to scan</string>
    <string name="immagine_biglietto_nfc">NFC ticket image</string>
    <string name="read_another_ticket">To read another ticket, move it close to the NFC sensor again</string>
    <string name="corse_disponibili">%d rides available</string>
    <string name="in_corso">In progress %d:%d</string>
    <string name="corse_esaurite">Trips exhausted</string>
    <string name="dettagli_biglietto">Ticket info</string>
    <string name="nfc_not_supported">This device does not support NFC technology.</string>
    <string name="nfc_disabled">NFC disabled. Activate NFC and press the back button.</string>
    <string name="information">Information</string>
    <string name="close_dialog">Close</string>
    <string name="info_message">Simple opensource application to view the remaining trips in GTT tickets. https://github.com/dslul/ticketreader Icons: Card Paypass by Viktor Vorobyev from the Noun Project; samsung galaxy by Setyo Ari Wibowo from the Noun Project</string>
    <string name="ticket_not_supported">Invalid ticket!</string>
    <string name="ticket_correctly_read">Ticket read correctly.</string>
    <string name="read_failure">Reading failed, try again</string>
    <string name="communication_error">Communication error. Try again</string>
</resources>
